# Abominable-Intelligence

./: .gitignore  Abominable-Intelligence.py  LICENSE  README.md  abominable_intelligence.py  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
.github/workflows/scripts/: pre-commit.sh  run.sh
Abominable-Intelligence/: abominable_intelligence.py  config.yaml  decorators.py  listeners.py
Abominable-Intelligence/abominable_modules/: git.py  tabletop.py
Abominable-Intelligence/modules/: git.py
Abominable_intelligence/: abominable_intelligence.py  config.yaml  config.yaml.example  global_variables.py
Abominable_intelligence/modules/: git.py  listeners.py  tabletop.py
abominable_intelligence/: abominable_intelligence.py  config.yaml.example  data_manager.py  decorators.py  global_variables.py  hooks.py  main.py
abominable_intelligence/data/: config.json.example  data.json.example  sql.json.example
abominable_intelligence/extensions/: MySQL.py  core.py  git.py  gw2.py  listeners.py  ollama.py  tabletop.py  utility.py
abominable_intelligence/extensions/gw2/: gw2.py  gw2api.py
abominable_intelligence/modules/: MySQL.py  core.py  git.py  gw2.py  listeners.py  tabletop.py
