[project]
name = "abominable-intelligence"
version = "0.1.0"
description = "Nuke Ops's Discord bot"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=47.0.0",
    "hikari>=2.5.0",
    "hikari-lightbulb>=3.2.4",
    "hikari-miru>=4.2.0",
    "mysql-connector-python>=9.7.0",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
]
